feat: agreementTemplates
